# thumbhash_cpp2

./: .gitignore  CMakeLists.txt  README.md  cpp1_test.cpp  tests.cpp2  thumbhash.cpp2  thumbhash.h  thumbhash.h2
imhex/: thumbhash.hexpat
test_data/: testpic_cat1.c.inl
